# offload

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  justfile
.claude/skills/run-offload/: SKILL.md  smoke.sh
.github/workflows/: ci.yml
config/: offload.default.toml
crates/classifier/: Cargo.toml
crates/classifier/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/detector/tests/: run_inference.rs
crates/offload/: Cargo.toml
crates/offload/src/: cli.rs  main.rs
crates/offload/tests/: cli_parses.rs
crates/pipeline-core/: Cargo.toml
crates/pipeline-core/src/: lib.rs
crates/reid/: Cargo.toml
crates/reid/src/: lib.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: lib.rs
crates/video-io/: Cargo.toml
crates/video-io/src/: lib.rs
crates/video-io/tests/: extract_frames.rs  write_clips.rs
models/: download.sh
tests/integration/: .gitkeep
